# name-cache

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
nameko-cache/: proxy.py
test/: test_proxy.py
