[tool.poetry]
name = "nameko-cache"
version = "0.1.0"
description = ""
authors = ["Pony Ma <mtf201013@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
nameko = "3.0.0.rc11"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-eventlet = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
